tools/flowc/tests/errors/error26a.flow
import tools/flowc/tests/errors/error26;

export {
	file = 1;
}

